// Copyright (c) HashiCorp, Inc.
// SPDX-License-Identifier: MPL-2.0

syntax = "proto3";

package hashicorp.consul.hcp.v1;

import "pbresource/annotations.proto";

message LinkConfiguration {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_CLUSTER};

  string resource_id = 1;
  string client_id = 2;
  string client_secret = 3;
  string hostname = 4;
  string auth_url = 5;
  string scada_address = 6;
}
